@startuml

title __SERVICE's Class Diagram__\n

  namespace fi.delektre.ringa.ring_thesis {
    namespace service {
      class fi.delektre.ringa.ring_thesis.service.BLE_ConnectionCheck {
          ~ activityContext : Context
          ~ duration : int
          + BLE_ConnectionCheck()
          + onReceive()
      }
    }
  }
  

  namespace fi.delektre.ringa.ring_thesis {
    namespace service {
      class fi.delektre.ringa.ring_thesis.service.BLE_Service {
          + currentTimeMillis : Long
          + lineDataSetBloodPressure : LineDataSet
          + lineDataSetFluidBalance : LineDataSet
          + lineDataSetPulse : LineDataSet
          + lineDataSetTemperature1 : LineDataSet
          + lineDataSetTemperature2 : LineDataSet
          + lineDataSetsTemperatures : ArrayList<ILineDataSet>
          - TAG : String
          - UserID : String
          - connectionObservable : Observable<RxBleConnection>
          - currentUser : FirebaseUser
          - disconnectTriggerSubject : PublishSubject<Void>
          - graphIndex : int
          - mAuth : FirebaseAuth
          - mAuthStateListener : AuthStateListener
          - mFirebaseDatabase : FirebaseDatabase
          - mReferecence : DatabaseReference
          - rxBleClient : RxBleClient
          - rxBleDevice : RxBleDevice
          - scanSubscription : Disposable
          - tempArrayList : ArrayList<Integer>
          {static} + CRC8()
          + fetchData()
          + onBind()
          + onCreate()
          + onDestroy()
          + onScanSuccess()
          + onStartCommand()
          # clearSubscription()
          # findDevice()
          ~ fetchDataTimer()
          ~ showData()
          - handleBleScanException()
          - onReadFailure()
          - onScanFailure()
          - prepareConnectionObservable()
      }
    }
  }
  

  fi.delektre.ringa.ring_thesis.service.BLE_ConnectionCheck -up-|> android.content.BroadcastReceiver
  fi.delektre.ringa.ring_thesis.service.BLE_Service -up-|> android.app.Service
  fi.delektre.ringa.ring_thesis.service.BLE_Service o-- fi.delektre.ringa.ring_thesis.util.LineDataCollection : parseData
  fi.delektre.ringa.ring_thesis.service.BLE_Service o-- fi.delektre.ringa.ring_thesis.service.BLE_ConnectionCheck : BLE_ConnetionCheck


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
